tests/snapshots/snapshots__insert_dialog_with_subtasks_text.snap
---
source: tests/snapshots.rs
assertion_line: 232
expression: buffer_to_text(&buf)
---
╭ フ ィ ル タ ー  ────────────╮╭Tuxedo Task  /tmp/tuxedo-snapshot.txt ╮╭ デ ィ テ ー ル  ────────────────────╮
│                        ││                                      ││                                │
│ プ ロ ジ ェ ク ト            ││ (2)  PRIORITY A  ────────────────────││ priority  (A)                  │
│   +work             4  ││  1 ▸ (A) Finish Q2 board deck +work @││ created   2026-05-01           │
│   +health           3  ││  2   (A) Call dentist to reschedule c││ due       2026-05-06  today    │
│   +finance          2  ││ (3)  PRIORITY B  ────────────────────││ projects  +work                │
│   +home             1  ││  3   (B) Review pull requests for aut││ contexts  @laptop              │
│   +learning         1  ││  4   (B) Renew passport before summer││                                │
│   +personal         1  ││  5   (B) Draft hiring rubric for seni││ ロ ー                            │
│   +travel           1  ││ (2)  PRIORITY C  ────────────────────││                                │
│                        ││  6   (C) Pay quarterly estimated taxe││ (A) 2026-05-01 Finish Q2 board │
│ コ ン テ キ ス ト            ││  7┌ ADD TASK ────────────────────────────┐ck +work @laptop             │
│   @errands          4  ││ (8│                                      │e:2026-05-06                 │
│   @home             4  ││  8│    Plan team offsite +work           │                             │
│   @laptop           4  ││  9│      Book venue                      │                             │
│   @phone            3  ││ 10│  ›     Send invites█                 │                             │
│                        ││ 11│  ok                                  │                             │
│                        ││ 12│                                      │                             │
│                        ││ 13│  format: (A) Buy milk +shop @home due│                             │
│                        ││ 14│                                      │                             │
│                        ││ 15└──────────────────────────────────────┘                             │
│                        ││                                      ││                                │
│                        ││                                      ││                                │
│                        ││                                      ││                                │
│                        ││                                      ││                                │
│                        ││                                      ││                                │
│                        ││                                      ││                                │
│                        ││                                      ││                                │
│                        ││                                      ││                                │
│                        ││                                      ││                                │
╰────────────────────────╯╰──────────────────────────────────────╯╰────────────────────────────────╯
 INSERT   Enter save · Esc normal                       15 open · 2026-05-06 · Tuxedo Task 2026.7.1
